--- a/assets/css/user/public-profile.css
+++ b/assets/css/user/public-profile.css
@@ -32,11 +32,17 @@
         flex-direction: column;
         align-items: center;
     }
+    .user-profile-details > * + * {
+        margin-top: 8px;
+    }
 }
 
 @media (max-width: 470px)
 {
     .user-profile-details > * {
         flex-direction: column;
+    }
+    .user-profile-details > * + * {
+        margin-top: 15px;
     }
 }
